ENCD-4773 fix browser styles on IE 11 (#2872)

--- a/src/encoded/static/scss/encoded/modules/_genome_browser.scss
+++ b/src/encoded/static/scss/encoded/modules/_genome_browser.scss
@@ -170,7 +170,7 @@
 }
 
 .facet-term {
-    background-color: unset;
+    background-color: transparent;
 }
 
 .valis-browser {
